# acopia

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  SAD_Acopia_energia.md  docker-compose.yml  pyproject.toml
.github/workflows/: observatorio.yml
datos/: .gitignore
datos/cmg/: sgregorio_2025_ene.xlsx  sgregorio_2025_feb.xlsx  sgregorio_2025_mar-dic.xlsx
datos/erv/: reducciones_abril26.xlsx  reducciones_enero26.xlsx  reducciones_febrero26.xlsx  reducciones_marzo26.xlsx  reducciones_mayo26.xlsx
docs/: AUDIT.md  CASES.md  TROUBLESHOOTING.md
src/acopia/: __init__.py
src/acopia/application/: __init__.py  backtest.py  backtest_politica.py  comparar_modos.py  planificar_despacho.py  pronosticar.py  reoptimizar_intradia.py  simular_escenario.py
src/acopia/domain/: __init__.py
src/acopia/domain/entities/: __init__.py  accion_despacho.py  bateria.py  escenario.py  estado_bateria.py  observacion.py  plan_despacho.py  planta.py  politica_despacho.py  producto_sscc.py  rastro.py  rastro_forecast.py
src/acopia/domain/ports/: __init__.py  puerto_forecaster.py  puerto_historia.py  puerto_optimizador.py  repositorio_planes.py
src/acopia/domain/services/: __init__.py  deteccion_desvio.py  explicador_despacho.py  funcion_objetivo.py  huella.py  metricas_forecast.py  modelo_bateria.py  simulador_ejecucion.py
src/acopia/domain/value_objects/: __init__.py  eficiencia.py  energia.py  intervalo.py  potencia.py  precio.py  soc.py
src/acopia/infrastructure/: __init__.py
src/acopia/infrastructure/drl/: entorno_despacho.py  optimizador_drl.py
src/acopia/infrastructure/forecasting/: __init__.py  forecaster_estacional.py  forecaster_lstm.py  forecaster_sarimax.py
src/acopia/infrastructure/ingesta/: __init__.py  gateway_csv.py  preparacion.py  reducciones_erv.py
src/acopia/infrastructure/optimizacion/: __init__.py  optimizador_lp.py
src/acopia/infrastructure/persistencia/: __init__.py  repositorio_planes_memoria.py
src/acopia/interfaces/: __init__.py  demo_dia.py
src/acopia/interfaces/cli/: __init__.py  preparar_datos.py
tests/application/: test_backtest.py  test_backtest_politica.py  test_comparar_modos.py  test_planificar_despacho.py  test_pronosticar.py  test_reoptimizar_intradia.py  test_simular_escenario.py
tests/domain/: test_deteccion_desvio.py  test_explicador_despacho.py  test_funcion_objetivo.py  test_huella.py  test_metricas_forecast.py  test_modelo_bateria.py  test_simulador_ejecucion.py  test_value_objects.py
tests/infrastructure/: test_cooptimizacion_sscc.py  test_cuantizacion_lp.py  test_forecaster_estacional.py  test_forecaster_lstm.py  test_forecaster_sarimax.py  test_forecasters_borde.py  test_gateway_csv.py  test_optimizador_drl.py  test_optimizador_estocastico.py  test_preparacion.py  test_reducciones_erv.py
tests/infrastructure/datos/: muestra_planta.csv
tests/interfaces/: test_dashboard.py  test_mcp.py  test_observatorio.py  test_rest.py  test_sitio_observatorio.py
(+8 files in other folders)
