[project]
name = "acopia"
version = "0.1.0"
description = "Motor de optimización de despacho solar + batería (PV-BESS) para el mercado eléctrico chileno"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "cvxpy>=1.5",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "statsmodels>=0.14",
]

[project.scripts]
acopia-datos = "acopia.interfaces.cli.preparar_datos:main"

[project.optional-dependencies]
# Seq2Seq-LSTM (ADR-002). Pesado y opcional: el núcleo determinista no lo requiere.
# Instalar la rueda CPU desde https://download.pytorch.org/whl/cpu para evitar CUDA.
forecasting = ["torch>=2.2"]
# Lectura de .xlsx (descargas del Coordinador / Explorador Solar) en `acopia-datos`.
ingesta = ["openpyxl>=3.1"]
# Capa MCP read-only + simulación (Fase 4): `python -m acopia.interfaces.mcp.servidor`.
mcp = ["fastmcp>=3"]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acopia"]

# ---------------------------------------------------------------------------
# Toolchain
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# N818: "AccionInfactible" es término del dominio (español); no forzamos sufijo Error.
ignore = ["N818"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "cvxpy", "cvxpy.*", "statsmodels", "statsmodels.*",
    "torch", "torch.*", "openpyxl", "openpyxl.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

# ---------------------------------------------------------------------------
# import-linter: fronteras de arquitectura (frontera dura del dominio)
# ---------------------------------------------------------------------------

[tool.importlinter]
root_package = "acopia"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "El dominio es puro: no importa otras capas ni librerías pesadas"
type = "forbidden"
source_modules = ["acopia.domain"]
forbidden_modules = [
    "acopia.application",
    "acopia.infrastructure",
    "acopia.interfaces",
    "torch",
    "cvxpy",
    "pyomo",
    "stable_baselines3",
    "sqlalchemy",
    "fastapi",
    "pydantic",
]

[[tool.importlinter.contracts]]
name = "La aplicación no conoce adaptadores ni entrega"
type = "forbidden"
source_modules = ["acopia.application"]
forbidden_modules = ["acopia.infrastructure", "acopia.interfaces"]
